# chat-rooms-actix

./: Cargo.toml  Dockerfile  Procfile  README.md  heroku.yml
src/: constants.rs  lib.rs  main.rs  server.rs
src/actors/: chat_server.rs  chat_session.rs  mod.rs
src/commands/: mod.rs
src/messages/: chat_server.rs  chat_session.rs
src/messages/server/: mod.rs
src/messages/session/: command.rs  mod.rs  wsmessage.rs
src/models/: commands.rs  mod.rs  ws.rs
src/models/commands/: mod.rs
src/models/messages/: chat_server.rs  mod.rs
src/routes/: mod.rs  ws.rs
