[package]
name = "actix-messaging"
version = "0.1.0"
authors = ["Víctor Martínez <victorcoder2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"