[package]
name = "actix-messaging"
version = "0.1.0"
authors = ["Víctor Martínez <victorcoder2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.3"
actix-web-actors = "3.0.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde_json = "1.0.64"
serde = "1.0.124"
env_logger = "0.11.5"
rand = "0.8.3"